# velox4j

./: .gitignore  .pre-commit-config.yaml  README.md  pom.xml
.github/workflows/: bot-dep.yml  format.yml  java-ut.yml  pub-snapshot.yml  ut-cpp.yml  ut-java-al2023.yml  ut-java.yml
.github/workflows/scripts/bot-dep/: bump-velox.sh
.github/workflows/scripts/common/: free-runner-disk.sh  install-fbthrift.sh  setup-al2023.sh  setup-centos7.sh  setup-centos9.sh  setup-ubuntu22.sh
.github/workflows/scripts/format/: Dockerfile  format.sh
.github/workflows/scripts/java-ut/: setup-ubuntu20.sh
.github/workflows/scripts/setup/: setup-ubuntu24.sh
.github/workflows/scripts/ut-cpp/: setup-centos7.sh  setup-ubuntu24.sh
.github/workflows/scripts/ut-java/: setup-centos7.sh
src/main/cpp/: CMakeLists.txt  build.sh  patch-folly.sh  test.sh  velox-ref-hash.txt  velox-ref-md5.txt  velox-ref.txt
src/main/cpp/cmake/: apply_velox_patches.cmake
src/main/cpp/cmake/modules/: Findvelox.cmake
src/main/cpp/cmake/patches/velox/: 0001-disable-shared-gflags-for-bundled-arrow.patch  0002-Avoid-cyclic-reference-on-drivers-shared-pointers-cr.patch  apply.cmake  fix-cmake-project-dir.patch  fix-gcc-lambda-redefinition.patch  fix-s2geometry-absl-dep.patch  iconfig-gcc-bug-103186.patch  pr-14586.patch  pr-14961.patch  pr-5962.patch  staging-backtick-tokenizer.patch  velox-14504.patch
src/main/cpp/cmake/resolve_dependency_modules/: cppkafka.cmake
src/main/cpp/main/: CMakeLists.txt  DummySource.cc  JniWrapper.cc  JniWrapper.h  Velox4j.cc  jni_wrapper.cc  jni_wrapper.h  velox4j.cpp
src/main/cpp/main/dummy/: Dummy.cc  Dummy.h
src/main/cpp/main/init/: Init.cc  Init.h
src/main/cpp/main/jni/: JniCommon.cc  JniCommon.h  JniError.cc  JniError.h  JniLoader.cc  JniWrapper.cc  JniWrapper.h
src/main/cpp/main/velox4j/: Empty.cc
src/main/cpp/main/velox4j/arrow/: Arrow.cc  Arrow.h
src/main/cpp/main/velox4j/config/: Config.cc  Config.h
src/main/cpp/main/velox4j/connector/: ExternalStream.cc  ExternalStream.h
src/main/cpp/main/velox4j/dummy/: Dummy.cc
src/main/cpp/main/velox4j/eval/: Evaluation.cc  Evaluation.h  Evaluator.cc  Evaluator.h
src/main/cpp/main/velox4j/exec/: Executor.cc  Executor.h  QueryExecutor.cc  QueryExecutor.h  TaskRunner.cc  TaskRunner.h
src/main/cpp/main/velox4j/init/: Config.cc  Config.h  Init.cc  Init.h
src/main/cpp/main/velox4j/iterator/: BlockingQueue.cc  BlockingQueue.h  DownIterator.cc  DownIterator.h  ExportIterator.cc  ExportIterator.h  ImportIterator.cc  ImportIterator.h  UpIterator.cc  UpIterator.h
src/main/cpp/main/velox4j/jni/: FlinkJniCaller.h  JniCommon.cc  JniCommon.h  JniError.cc  JniError.h  JniLoader.cc  JniWrapper.cc  JniWrapper.h  StatefulTimerService.h  StaticJniWrapper.cc  StaticJniWrapper.h
src/main/cpp/main/velox4j/lifecycle/: ObjectStore.cc  ObjectStore.h  ResourceMap.h  Session.cc  Session.h
src/main/cpp/main/velox4j/memory/: AllocationListener.cc  AllocationListener.h  ArrowMemoryPool.cc  ArrowMemoryPool.h  JavaAllocationListener.cc  JavaAllocationListener.h  MemoryManager.cc  MemoryManager.h
src/main/cpp/main/velox4j/numeric/: Numeric.cc  Numeric.h
src/main/cpp/main/velox4j/query/: BoundSplit.h  Query.cc  Query.h  QueryExecutor.cc  QueryExecutor.h  StatefulQueryExecutor.cc  StatefulQueryExecutor.h
src/main/cpp/main/velox4j/shaded/: README.md
src/main/cpp/main/velox4j/shaded/arrow/: abi.h  jni_wrapper.cc
src/main/cpp/main/velox4j/shuffle/: HashPartitioner.cc  HashPartitioner.h  ShuffleWriter.cc  ShuffleWriter.h
src/main/cpp/main/velox4j/vector/: Vectors.cc  Vectors.h
src/main/cpp/src/: velox4j.h
src/main/cpp/test/: CMakeLists.txt  DummyTest.cc  test.cc
src/main/cpp/test/dummy/: DummyTest.cc
src/main/cpp/test/velox4j/dummy/: DummyTest.cc
src/main/cpp/test/velox4j/init/: InitFlinkTest.cc
src/main/cpp/test/velox4j/iterator/: BlockingQueueTest.cc
src/main/cpp/test/velox4j/query/: QuerySerdeTest.cc  QueryTest.cc  QueryTest.cpp
src/main/cpp/test/velox4j/test/: Init.h
src/main/java/io/github/zhztheplayer/velox4j/: Main.java  Velox4J.java  Velox4j.java
src/main/java/org/boostscale/velox4j/: Velox4j.java
src/main/java/org/boostscale/velox4j/aggregate/: Aggregate.java  AggregateStep.java
src/main/java/org/boostscale/velox4j/arrow/: Arrow.java
src/main/java/org/boostscale/velox4j/collection/: Streams.java
src/main/java/org/boostscale/velox4j/config/: Config.java  ConnectorConfig.java
src/main/java/org/boostscale/velox4j/connector/: Assignment.java  ColumnHandle.java  ColumnType.java  CommitStrategy.java  CompressionKind.java  ConnectorInsertTableHandle.java  ConnectorSplit.java  ConnectorTableHandle.java  ExternalStream.java  ExternalStreamConnectorSplit.java  ExternalStreamTableHandle.java  ExternalStreams.java  FileFormat.java  FileNameGenerator.java  FileProperties.java  HiveBucketConversion.java  HiveBucketProperty.java  HiveColumnHandle.java  HiveConnectorSplit.java  HiveInsertFileNameGenerator.java  HiveInsertTableHandle.java  HiveSortingColumn.java  HiveTableHandle.java  InsertTableHandle.java  LocationHandle.java  RowIdProperties.java  SubfieldFilter.java
src/main/java/org/boostscale/velox4j/data/: BaseVector.java  BaseVectors.java  RowVector.java  RowVectors.java  SelectivityVector.java  SelectivityVectors.java  VectorEncoding.java
src/main/java/org/boostscale/velox4j/eval/: Evaluation.java  Evaluations.java  Evaluator.java
src/main/java/org/boostscale/velox4j/exception/: ExceptionDescriber.java  VeloxException.java
src/main/java/org/boostscale/velox4j/expression/: CallTypedExpr.java  CastTypedExpr.java  ConcatTypedExpr.java  ConstantTypedExpr.java  DereferenceTypedExpr.java  FieldAccessTypedExpr.java  TypedExpr.java  (+2 more)
src/test/resources/plan/: example-1.json
src/test/resources/query/: example-1.json
src/test/resources/query-output/: tpch-local-partition-gather-1.tsv  tpch-table-write-1.tsv  tpch-window-1.tsv
src/test/resources/vector-output/: partition-by-keys-1.txt  partition-by-keys-2.txt  variant-to-vector-2.txt  wrap-partitions-row-vector-1.txt  wrap-partitions-row-vector-2.txt
(+456 files in other folders)
